// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components utils : labels RenderLabel ValueRendered should display name and address formatted as aircall eg: with address into parenthesis 1`] = `
<IntegrationsDetailLabel
  integration={
    Immutable.Map {
      type: "aircall",
      name: "common",
      address: "aircall style",
    }
  }
>
  <span>
    <SourceIcon
      className="mr-2"
      type="aircall"
    >
      <i
        className="icon d-inline-block material-icons mr-2"
      >
        phone
      </i>
    </SourceIcon>
    common (aircall style)
  </span>
</IntegrationsDetailLabel>
`;

exports[`components utils : labels RenderLabel ValueRendered should display name and address formatted in-lined 1`] = `
<IntegrationsDetailLabel
  integration={
    Immutable.Map {
      type: "gmail",
      name: "common",
      address: "inlined email",
    }
  }
>
  <span>
    <SourceIcon
      className="mr-2"
      type="gmail"
    >
      <i
        className="icon d-inline-block material-icons mr-2"
      >
        email
      </i>
    </SourceIcon>
    common &lt;inlined email&gt;
  </span>
</IntegrationsDetailLabel>
`;

exports[`components utils : labels RenderLabel ValueRendered should display the address to prevent confusion 1`] = `
<IntegrationsDetailLabel
  integration={
    Immutable.Map {
      type: "email",
      name: "common",
      meta: Immutable.Map {
        address: "specific",
      },
    }
  }
>
  <span>
    <SourceIcon
      className="mr-2"
      type="email"
    >
      <i
        className="icon d-inline-block material-icons mr-2"
      >
        email
      </i>
    </SourceIcon>
    common &lt;specific&gt;
  </span>
</IntegrationsDetailLabel>
`;

exports[`components utils : labels RenderLabel ValueRendered should display the name because the address is empty 1`] = `
<IntegrationsDetailLabel
  integration={
    Immutable.Map {
      type: "email",
      name: "common",
      meta: Immutable.Map {
        address: "",
      },
    }
  }
>
  <span>
    <SourceIcon
      className="mr-2"
      type="email"
    >
      <i
        className="icon d-inline-block material-icons mr-2"
      >
        email
      </i>
    </SourceIcon>
    common
  </span>
</IntegrationsDetailLabel>
`;

exports[`components utils : labels RenderLabel ValueRendered should display the name because the type is facebook 1`] = `
<IntegrationsDetailLabel
  integration={
    Immutable.Map {
      type: "facebook",
      name: "common",
      meta: Immutable.Map {
        address: "specific",
      },
    }
  }
>
  <span>
    <SourceIcon
      className="mr-2"
      type="facebook"
    >
      <i
        className="icon d-inline-block icon-custom icon-facebook mr-2"
      />
    </SourceIcon>
    common
  </span>
</IntegrationsDetailLabel>
`;
